tests/ui/unsupported_unary_op.stderr
[tests/ui/unsupported_unary_op.pea:2:15-2:20] error: mismatched types: expected `bool`, found: `[u8]`

error: aborting due to 1 previous error

